--- a/cadPlus-Api.csproj
+++ b/cadPlus-Api.csproj
@@ -7,4 +7,12 @@
     <RootNamespace>cadPlus_Api</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqLite" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
