--- a/cadPlus-Api.csproj
+++ b/cadPlus-Api.csproj
@@ -12,6 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="JenkinsFile" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="JenkinsFile" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Flunt" Version="2.0.5" />
     <PackageReference Include="Flunt.Extensions.Br" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
